--- a/style.css
+++ b/style.css
@@ -2,4 +2,85 @@
   font-family: "Indie Flower", cursive;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  background-color: salmon;
+}
+.nav_logo {
+  font-size: 22px;
+}
+.nav_logo > i {
+  color: white;
+  font-size: 30px;
+  padding: 0 10px 0 20px;
+}
+.nav_logo > a:hover {
+  color: white;
+}
+.nav_button {
+  display: none;
+}
+.nav_menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+.nav_menu_list {
+  padding: 15px 20px;
+  font-size: 20px;
+}
+.nav_menu_list:hover {
+  background-color: rosybrown;
+  color: purple;
+  border-radius: 10px;
+  padding: 10px 15px;
+}
+.nav_icon > a {
+  font-size: 20px;
+  color: white;
+  padding-right: 15px;
+}
+.nav_icon :hover {
+  transform: scale(1.8);
+  color: red;
+  transition: all 0.3s;
+}
+@media screen and (max-width: 800px) {
+  .nav_bar {
+    padding: 5px 0 0 0;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .nav_button {
+    display: block;
+    position: fixed;
+    right: 10px;
+    top: 10px;
+  }
+  .nav_button:hover {
+    transform: scale(1.4);
+    color: white;
+    transition: all 0.3s;
+  }
+  .nav_menu {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .nav_menu_list {
+    width: 100%;
+    text-align: center;
+  }
+  .nav_icon {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  .nav_icon > a {
+    padding: 10px;
+  }
+  .nav_icon :hover {
+    transform: scale(1.3);
+    color: red;
+    transition: all 0.3s;
+  }
 }
